--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-svg-pan-zoom": "^2.4.5",
     "webpack": "^2.2.1",
@@ -19,6 +20,5 @@
     "start": "webpack-dev-server --hot --inline"
   },
   "author": "",
-  
   "license": "ISC"
 }
