--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
     "react-svg-pan-zoom": "^2.4.5",
     "sqlite": "^2.3.0",
     "sqlite3": "^3.1.8",
