--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-react": "^6.22.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
+    "react-bootstrap-table": "^3.1.0",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "react-svg-pan-zoom": "^2.4.5",
