--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "rc-switch": "^1.4.3",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
+    "react-bootstrap-switch": "^15.0.4",
     "react-bootstrap-table": "^3.1.0",
+    "react-bootstrap-toggle": "^2.0.4",
     "react-dom": "^15.4.2",
+    "react-draggable": "^2.2.3",
     "react-router": "^3.0.2",
     "react-svg-pan-zoom": "^2.4.5",
     "sqlite": "^2.3.0",
